<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddExpense">

    <EditText
        android:id="@+id/ex_addType"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/type_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/ex_datetimelayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/ex_addType"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/ex_addType"
        app:layout_constraintTop_toBottomOf="@+id/ex_addType">

        <EditText
            android:id="@+id/ex_addDate"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/date_txt"
            android:inputType="date"
            android:textSize="15sp"
            android:autofillHints="" />

        <EditText
            android:id="@+id/ex_addTime"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/time_txt"
            android:inputType="time"
            android:textSize="15sp"
            android:autofillHints="" />
    </LinearLayout>
    <EditText
        android:id="@+id/ex_addAmount"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="numberDecimal"
        android:gravity="start|top"
        android:hint="@string/amount_txt"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/ex_addType"
        app:layout_constraintStart_toStartOf="@+id/ex_addType"
        app:layout_constraintTop_toBottomOf="@+id/ex_datetimelayout" />

    <EditText
        android:id="@+id/ex_addComment"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginTop="15dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/comment_txt"
        android:inputType="textMultiLine"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/ex_addType"
        app:layout_constraintStart_toStartOf="@+id/ex_addType"
        app:layout_constraintTop_toBottomOf="@+id/ex_addAmount" />
    <Button
        android:id="@+id/btn_Cancel"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:text="@string/cancel_txt"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/ex_addComment"
        app:layout_constraintTop_toBottomOf="@+id/ex_addComment" />

    <Button
        android:id="@+id/btn_Addexpense"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="25dp"
        android:text="@string/add_expense_txt"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_Cancel"
        app:layout_constraintEnd_toEndOf="@+id/ex_addComment"
        app:layout_constraintStart_toEndOf="@+id/btn_Cancel"
        app:layout_constraintTop_toTopOf="@+id/btn_Cancel" />



</androidx.constraintlayout.widget.ConstraintLayout>